--- a/deploy_to_cluster.gocd.yaml
+++ b/deploy_to_cluster.gocd.yaml
@@ -27,7 +27,7 @@ pipelines:
         jobs:
           deploy:
             timeout: 0
-            elastic_profile_id: demo-app
+            elastic_profile_id: agent-1
             tasks:
             - fetch:
                 options:
