--- a/test_application.gocd.yaml
+++ b/test_application.gocd.yaml
@@ -21,7 +21,7 @@ pipelines:
         jobs:
           test_app_image:
             timeout: 0
-            elastic_profile_id: demo-app
+            elastic_profile_id: agent-1
             tasks:
             - fetch:
                 artifact_id: bulletin-board
